5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4431/executions/1811_2564.log
== TEST (2019-06-04 20:39:42) 
-- CODE:
from numpy import|*
x=array(eval(input("Digite a tabela do time 1: ")))
y=array(eval(input("Digite a tebela do time 2: ")))
m=zeros(3,dtype=int)
h=0
j=0
t=0
g=0
for i in x:
	if(i > y[h]):
		j=j+1
		h=h+1
	elif(i = y[h]):
		y=y+1
		h=h+1
	elif( i < y[h]):
		g=g+1
		h=h+1
print(j,y,g)		

-- ERROR:
File "XXXX", line 1
    from numpy import|*
                     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-04 20:39:52) 
-- CODE:
from numpy import*
x=array(eval(input("Digite a tabela do time 1: ")))
y=array(eval(input("Digite a tebela do time 2: ")))
m=zeros(3,dtype=int)
h=0
j=0
t=0
g=0
for i in x:
	if(i > y[h]):
		j=j+1
		h=h+1
	elif(i = y[h]):
		y=y+1
		h=h+1
	elif( i < y[h]):
		g=g+1
		h=h+1
print(j,y,g)		

-- ERROR:
File "XXXX", line 13
    elif(i = y[h]):
           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-04 20:40:03) 
-- CODE:
from numpy import*
x=array(eval(input("Digite a tabela do time 1: ")))
y=array(eval(input("Digite a tebela do time 2: ")))
m=zeros(3,dtype=int)
h=0
j=0
t=0
g=0
for i in x:
	if(i > y[h]):
		j=j+1
		h=h+1
	elif(i == y[h]):
		y=y+1
		h=h+1
	elif( i < y[h]):
		g=g+1
		h=h+1
print(j,y,g)		

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-04 20:40:55) 
-- CODE:
from numpy import*
x=array(eval(input("Digite a tabela do time 1: ")))
y=array(eval(input("Digite a tebela do time 2: ")))
m=zeros(3,dtype=int)
h=0
j=0
t=0
g=0
for i in x:
	if(i > y[h]):
		j=j+1
		h=h+1
	elif(i == y[h]):
		t=t+1
		h=h+1
	elif( i < y[h]):
		g=g+1
		h=h+1
print(j,y,g)		

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-04 20:41:12) 
-- CODE:
from numpy import*
x=array(eval(input("Digite a tabela do time 1: ")))
y=array(eval(input("Digite a tebela do time 2: ")))
m=zeros(3,dtype=int)
h=0
j=0
t=0
g=0
for i in x:
	if(i > y[h]):
		j=j+1
		h=h+1
	elif(i == y[h]):
		t=t+1
		h=h+1
	elif( i < y[h]):
		g=g+1
		h=h+1
print(j,t,g)		

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-04 20:41:59) 
-- CODE:
from numpy import*
x=array(eval(input("Digite a tabela do time 1: ")))
y=array(eval(input("Digite a tebela do time 2: ")))
m=zeros(3,dtype=int)
h=0
j=0
t=0
g=0
for i in x:
	if(i > y[h]):
		j=j+1
		h=h+1
	elif(i == y[h]):
		t=t+1
		h=h+1
	elif( i < y[h]):
		g=g+1
		h=h+1
m[0]=m[0]+j
m[1]=m[1]+t
m[2]=m[2]+g
print(m)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-04 20:42:15) 
-- CODE:
from numpy import*
x=array(eval(input("Digite a tabela do time 1: ")))
y=array(eval(input("Digite a tebela do time 2: ")))
m=zeros(3,dtype=int)
h=0
j=0
t=0
g=0
for i in x:
	if(i > y[h]):
		j=j+1
		h=h+1
	elif(i == y[h]):
		t=t+1
		h=h+1
	elif( i < y[h]):
		g=g+1
		h=h+1
m[0]=m[0]+j
m[1]=m[1]+t
m[2]=m[2]+g
print(m)

-- EXECUTION TIME:
1.00753
-- TEST CASE 1:
---- input:
[2,3,2,4,3,5,3,4,2,3,1,0]
[3,3,1,0,2,3,3,0,1,2,1,1]
---- correct output:
[7 3 2]
---- user output:
[7 3 2]
-- TEST CASE 2:
---- input:
[1,2,1,2,1,2,1,2,0]
[3,5,3,3,3,3,3,3,3]
---- correct output:
[0 0 9]
---- user output:
[0 0 9]
-- TEST CASE 3:
---- input:
[1,2,2,2,2,1,1,2,2,1,1,2,2]
[0,1,1,1,0,0,0,0,0,0,1,1,1]
---- correct output:
[12 1 0]
---- user output:
[12  1  0]
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-11 21:20:40) 
-- CODE:
from numpy import*
x=array(eval(input("Digite a tabela do time 1: ")))
y=array(eval(input("Digite a tebela do time 2: ")))
m=zeros(3,dtype=int)
h=0
j=0
t=0
g=0
for i in x:
	if(i > y[h]):
		j=j+1
		h=h+1
	elif(i == y[h]):
		t=t+1
		h=h+1
	elif( i < y[h]):
		g=g+1
		h=h+1
m[0]=m[0]+j
m[1]=m[1]+t
m[2]=m[2]+g
print(m)

-- EXECUTION TIME:
1.03109
-- TEST CASE 1:
---- input:
[2,3,2,4,3,5,3,4,2,3,1,0]
[3,3,1,0,2,3,3,0,1,2,1,1]
---- correct output:
[7 3 2]
---- user output:
[7 3 2]
-- TEST CASE 2:
---- input:
[1,2,1,2,1,2,1,2,0]
[3,5,3,3,3,3,3,3,3]
---- correct output:
[0 0 9]
---- user output:
[0 0 9]
-- TEST CASE 3:
---- input:
[1,2,2,2,2,1,1,2,2,1,1,2,2]
[0,1,1,1,0,0,0,0,0,0,1,1,1]
---- correct output:
[12 1 0]
---- user output:
[12  1  0]
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
